[tool.poetry]
name = "brewblox-homebridge"
version = "0.0.1"
description = "Brewblox service that can control Homebridge switches"
authors = ["Justin Gasper <jmgasper@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4"
brewblox-service = "^3.1.2"
cryptography = "40.0.1"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"
pytest-mock = "*"
pytest-aiohttp = "*"
flake8 = "*"
autopep8 = "*"
aresponses = "*"
flake8-quotes = "*"
invoke = "==2.*"

[build-system]
requires = ["poetry>=0.12", "cryptography==40.0.1"]
build-backend = "poetry.masonry.api"
